trying to fix scrollbars in ie7

--- a/themes/poker/main.css
+++ b/themes/poker/main.css
@@ -400,8 +400,8 @@ div.tb-fix-margin a.LayerClose
 {
 	background:#FFFFFF url(images/bg_shop.gif) repeat scroll 0 0;
 	color:#727272;
-	width:294px;
-	height:291px;
+	width: 304px;
+	height: 294px;
 	padding:6px 8px;
 	position: relative; /*that should work already */
 	overflow: hidden;
